--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             </tr>
         </table>
         
+        <div class="warning invisible" id="warningDiv">
+        </div>
+        
         <script src="script.js"></script>
     </body>
 </html>
